# nitime

./: .gitignore  .mailmap  .travis.yml  INSTALL  MANIFEST.in  README.rst  README.txt  THANKS  appveyor.yml  build_helpers.py  documentation.html  genindex.html  index.html  min-requirements.txt  news.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  setup_egg.py
.github/workflows/: test.yml  wheels.yml
_downloads/5cf202a2386084551d86ad2bc409e474/: multi_taper_spectral_estimation.py
_downloads/68e2f9b2088d58e66f8e8f713d1b966d/: event_related_fmri.py
_downloads/6945f7bf99c9d8e4c647c0c5d4ce0fc2/: ar_est_2vars.py
_downloads/9cfbf4ba7d5b9b9ca7d4bafe36a9a1b3/: ar_est_3vars.py
_downloads/bca0d37381cab624810b4162600cc9d2/: multi_taper_coh.py
_downloads/ddd0ac7fc8c4030e2472efbc2d48b7be/: granger_fmri.py
_images/: inheritance-2006ee3ba64f9fa61f9ac9f39185dc111b81e27e.png.map  inheritance-3ed901b9dba42c68c79750341c75bdaa216ffa03.png.map  inheritance-40b547f871f7da1d77f797dc37c35eba4b29f62b.png.map  inheritance-57ac4e976f5d4d00f1bc55ba64044a76c56262a4.png.map  inheritance-76750d7a4bd02f80e30371408b3746bb0daa4a81.png.map  inheritance-ad5663f30a2c4746928dcc061796250415bf2ee6.png.map  inheritance-ba85da3e83a1faab44e541ddbc746c553f2eab52.png.map  inheritance-c40ec0b262a7e35501d32b6e54f8728a47d946c1.png.map  inheritance-d84c4f9c4e4bc2951e05beae8424f38a426155a4.png.map  inheritance-e68cc57d154f6ffdef3061432605b3c86411b95f.png.map  inheritance-f85ef4945845c7d8656cc78756d921696b15034e.png.map  inheritance-fef2c5c56cac4658e760f2b9548c2fe085180bee.png.map
_sources/: index.rst.txt
_sources/devel/: development_workflow.rst.txt  forking_hell.rst.txt  git_intro.rst.txt  how_to_release.rst.txt  index.rst.txt  patching.rst.txt
_sources/discussion/: interval_object.rst.txt  time_series_access.rst.txt
_sources/examples/: ar_est_1var.rst.txt  ar_est_2vars.rst.txt  ar_est_3vars.rst.txt  ar_model_fit.rst.txt  event_related_fmri.rst.txt  filtering_fmri.rst.txt  granger_fmri.rst.txt  grasshopper.rst.txt  index.rst.txt  mtm_baseband_power.rst.txt  mtm_harmonic_test.rst.txt  multi_taper_coh.rst.txt  multi_taper_spectral_estimation.rst.txt  resting_state_fmri.rst.txt  seed_analysis.rst.txt  snr_example.rst.txt
_sources/users/: index.rst.txt  overview.rst.txt
_sources/whatsnew/: version0.3.rst.txt  version0.6.rst.txt
_static/: documentation_options.js
api/: index.html
debian/: README.Debian  README.source  blends  changelog  control  copyright  gbp.conf  nitime.doc-base  python-nitime-doc.doc-base  python-nitime-doc.links  rules  watch
debian/patches/: deb_no_LICENSE  deb_no_sources_for_docs  series
devel/: configure_git.html  development_workflow.html  dot2_dot3.html  following_latest.html  forking_hell.html  git_development.html  git_install.html  git_intro.html  git_resources.html  how_to_release.html  index.html  patching.html  set_up_fork.html  usecases.html
diagnostics/: adaptive_mtm_weights.py
discussion/: base_classes.html  index.html  interval_object.html  multitaper_jackknife.html  note_about_discussion.html  time_series_access.html
doc/: Makefile  conf.py  documentation.rst  index.rst  interval_object_discussion.rst  links_names.txt  news.rst  time_series_access_discussion.rst
doc/_static/: nitime-banner.svgz
doc/_templates/: index.html  indexsidebar.html  layout.html  quicklinks.html
doc/devel/: development_workflow.rst  following_latest.rst  forking_hell.rst  git_intro.rst  git_links.inc  git_links.txt  how_to_release.rst  index.rst  patching.rst  set_up_fork.rst  usecases.rst
doc/discussion/: base_classes.rst  event_class.rst  index.rst  interval_object.rst  multitaper_jackknife.rst  note_about_discussion.rst  time_series_access.rst
doc/examples/: ar_est_1var.py  ar_est_2vars.py  ar_est_3vars.py  ar_model_fit.py  boxcar_inspect.py  event_related_fmri.py  event_related_fmri.rst  event_related_fmri_fir.py  example1.py  example_csv.py  example_grasshopper.py  filtering_fmri.py  fmri.py  fmri.rst  fmri1.py  fmri2.py  fmri3.py  fmri4.py  fmri5.py  fmri6.py  granger_fmri.py  grasshopper.py  grasshopper.rst  grasshopper1.py  grasshopper2.py  index.rst  kaiser_compare.py  mar_script.py  mar_script_3var.py  mtm_baseband_power.py  mtm_harmonic_test.py  multi_taper_coh.py  multi_taper_sdf.py  multi_taper_spectral_estimation.py  multi_taper_spectral_estimation.rst  note_about_examples.rst  note_about_examples.txt  resting_state_fmri.py  resting_state_fmri.rst  seed_analysis.py  (+8 more)
doc/sphinxext/: README.txt  docscrape.py  github.py  math_dollar.py  numpydoc.py  only_directives.py  plot_directive.py
doc/talk/: Makefile  make_figures.py  nitime_talk.tex
doc/users/: index.rst  install.rst  overview.rst  quickstart.rst  tutorial.rst
doc/whatsnew/: development.rst  index.rst  version0.3.rst  version0.4.rst  version0.5.rst  version0.6.rst  version0.7.rst
examples/: ar_est_1var.html  ar_est_2vars.html  ar_est_3vars.html  ar_model_fit.html  event_related_fmri.html  filtering_fmri.html  granger_fmri.html  grasshopper.html  index.html  mtm_baseband_power.html  mtm_harmonic_test.html  multi_taper_coh.html  multi_taper_sdf.py  multi_taper_spectral_estimation.html  resting_state_fmri.html  seed_analysis.html  snr_example.html
nitime/: LICENSE  __init__.py  _compat.py  _mpl_units.py  _utils.pyx  algorithms.py  analysis.py  coherencyx.pyx  conftest.py  descriptors.py  index_utils.py  lazy.py  lazyimports.py  mlab_spectral.py  mpl_units.py  setup.py  testlib.py  timeseries.py  utils.py  version.py  vista_utils.py  viz.py
nitime/algorithms/: __init__.py  autoregressive.py  cohere.py  coherence.py  correlation.py  entropy.py  event_related.py  (+3 more)
tools/: apigen.py  build_modref_templates.py  build_release  ex2rst  github_stats.py  make_examples.py  release  toollib.py  update_requirements.py
users/: index.html  install.html  overview.html  quickstart.html  tutorial.html
whatsnew/: development.html  index.html  version0.3.html  version0.4.html  version0.5.html  version0.6.html  version0.7.html
(+55 files in other folders)
