[build-system]
requires = [
  "setuptools",
  "setuptools_scm[toml]>=6.2",
  "cython",
  # As of numpy 1.25, you can now build against older APIs.
  # https://numpy.org/doc/stable/release/1.25.0-notes.html
  "numpy>=1.25; python_version > '3.8'",
  # NEP29-minimum as of Aug 17, 2023 (1.25 doesn't support 3.8)
  "numpy==1.22; python_version == '3.8'",
]
build-backend = "setuptools.build_meta"

[project]
name = "nitime"
dynamic = ["version"]
description = "Nitime: timeseries analysis for neuroscience data"
readme = "README.txt"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Nitime developers", email = "neuroimaging@python.org" },
]
maintainers = [
    { name = "Nipy Developers", email = "neuroimaging@python.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.22",
    "scipy>=1.8",
]

[project.optional-dependencies]
full = [
    "networkx>=2.7",
    "nibabel>=4.0",
]

[project.urls]
Download = "http://github.com/nipy/nitime/downloads"
Homepage = "http://nipy.org/nitime"

[tool.setuptools.packages.find]
include = ["nitime*"]

[tool.setuptools_scm]
write_to = "nitime/_version.py"

[tool.cibuildwheel]
# Disable PyPy
skip = "pp*"

# 64-bit builds only; 32-bit builds seem pretty niche these days, so
# don't bother unless someone asks
archs = ["auto64"]
