[build-system]
requires = [
  "setuptools",
  "setuptools_scm[toml]>=6.2",
  "cython",
  # Wheels need to be built with NumPy 2.0 to be compatible with 2.0 and 1.x
  "numpy>=2",
]
build-backend = "setuptools.build_meta"

[project]
name = "nitime"
dynamic = ["version"]
description = "Nitime: timeseries analysis for neuroscience data"
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Nitime developers", email = "neuroimaging@python.org" },
]
maintainers = [
    { name = "Nipy Developers", email = "neuroimaging@python.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
full = [
    "networkx>=3.0",
    "nibabel>=5.0",
]

[project.urls]
Download = "http://github.com/nipy/nitime/downloads"
Homepage = "http://nipy.org/nitime"

[tool.setuptools.packages.find]
include = ["nitime*"]

[tool.setuptools_scm]
write_to = "nitime/_version.py"

[dependency-groups]
test = [
    "pytest>=8",
    "pytest-cov>=2.11",
    "pytest-doctestplus>=1.5",
    "networkx>=3.0",
    "nibabel>=5.0",
]

[tool.cibuildwheel]
# Disable PyPy
skip = "pp*"
# 3.11 is abi3
build = "cp310-* cp311-*"
# 64-bit builds only; 32-bit builds seem pretty niche these days, so
# don't bother unless someone asks
archs = ["native"]
before-build = "pip install abi3audit"
test-requires = [
    "pytest",
    "nitime[full]",  # Enable all optional behavior
]
test-command = "pytest -rsx --pyargs nitime"

[tool.cibuildwheel.linux]
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  "bash tools/audit_wheel.sh {wheel}",
]

[tool.cibuildwheel.macos]
archs = ["native"]
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
  "bash tools/audit_wheel.sh {wheel}",
]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel abi3audit"
repair-wheel-command = [
  "delvewheel repair -w {dest_dir} {wheel}",
  "bash tools/audit_wheel.sh {wheel}",
]

[tool.pytest.ini_options]
minversion = "8"
testpaths = ["nitime"]
log_cli_level = "INFO"
xfail_strict = true
norecursedirs = [".git", "dist", "build", ".tox", ".venv"]
addopts = [
  "-rsx",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  # Config pytest-cov
  "--cov=nitime",
  "--cov-report=xml",
  # Comment out above and uncomment below to autofix doctests
  # "--doctest-only",
  # "--doctest-plus-generate-diff=overwrite",
]

[tool.codespell]
skip = '.git,*.pdf,*.svg,go.sum,*.css'
check-hidden = true
ignore-regex = '\b(Ines Samengo)\b'
ignore-words-list = 'nd,ans'
